# Adaptation-Tuning-PEFT

./: .gitignore  Makefile  README.md  pyproject.toml
classification/: data.py  filters.py  lora.py  metrics.py  p_tuning.py  prefix_tuning.py  train.py  utils.py
scripts/: fit.py
tests/: test_clean_data.py  test_filters.py  test_prepare_dataset.py
