[tool.poetry]
name = "adaptation-tuning-peft"
version = "0.1.0"
description = ""
authors = ["Yucheng <g1677321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "<=1.26.3"
pandas = "<=2.1.4"
peft = "^0.7.1"
transformers = "^4.36.2"
wandb = "^0.16.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
